[package]
name = "crypto_tool"
version = "0.1.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "2.33.3"
log = "0.4.14"
env_logger = "0.9.0"
chacha20 = "0.8.1"
indicatif = "0.16.2"
rand = "0.8.4"
sha3 = "0.9.1"