[package]
name = "crypto_tool"
version = "0.1.6"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "2.33.3"
log = "0.4.14"
env_logger = "0.9.0"
chacha20 = "0.8.1"
indicatif = "0.16.2"
rand = "0.8.4"
sha3 = "0.9.1"
aquamarine = "0.1.10"
native-windows-gui = "1.0.12"